# merge-sort-implementationer

./: Cargo.toml
.cargo/: config.toml
csv/: sorting_times.csv
src/: algorithms.rs  ball.rs  experiment.rs  main.rs  profiler.rs
