[package]
name = "iteration2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
clap = { version = "4.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
